use padding to ensure width aligns with hero and header

--- a/styles.css
+++ b/styles.css
@@ -109,14 +109,14 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 100px;
+    padding: 100px 200px;
 }
 
 .cta .box {
     background-color: #3882f6;
     border-radius: 10px;
     padding: 50px 150px;
-    width: 80%;
+    width: 100%;
     display: flex;
     align-items: center;
 }
